<resources>
    <string name="attenzione">Attenzione</string>
    <string name="ok">OK</string>
    <string name="annulla">Annulla</string>
    <string name="conferma">Conferma</string>
    <string name="info">Info</string>
    <string name="caricamento">Caricamento…</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="gps_permission_refused">GPS permission is not granted</string>
    <string name="cancel">Cancel</string>
    <string name="selected_address" translatable="false">Selected address..</string>
    <string name="choose_maximum_distance" translatable="false">Choose maximum distance</string>
    <string name="change_address" translatable="false">Change address</string>
    <string name="confirm">Confirm</string>
    <string name="km_placeholder" translatable="false">+%1$s km</string>
    <string name="punti_di_interesse">Punti di interesse</string>
    <string name="esplora">Esplora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ciao">Ciao, </string>
    <string name="accedi">Accedi</string>
    <string name="accedi_ospite">accedi come ospite</string>
    <string name="surname">Surname</string>
    <string name="name_user">Name</string>
    <string name="email">Email</string>
    <string name="corso_studi">Corso di studi</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="guida_feedback">Guida e feedback</string>
    <string name="contattaci">Contattaci</string>
    <string name="notifiche">Notifiche</string>
    <string name="schermi_vicini">Notifiche per schermi vicini</string>
    <string name="lettura">Lettura automatica</string>
    <string name="esci">Esci</string>
    <string name="aggiungi_un_poi">Aggiungi un punto di interesse</string>
    <string name="edificio">Edificio</string>
    <string name="aula">Aula</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="access_fine_location_rationale">Our app requires device location in order to determine classroom\'s distance to you.\n\n</string>
    <string name="access_background_location_rationale">"You should go to app setting and then: Permissions ->GPS Location -> Check \"Allow all the time\"\n\n"></string>
    <string name="access_bluetooth">"To find classrooms we need to access bluetooth devices around you\n\n"</string>
    <string name="also_access_bluetooth">"Also to find classrooms we need to access bluetooth devices around you\n"</string>
    <string name="guest">Guest</string>
    <string name="aula_nelle_vicinanze">Aula nelle vicinanze</string>
    <string name="scansione_in_background">Scansione in background</string>
    <string name="la_ricerca_di_aule">La ricerca di aule proseguirà anche quando l\'app è chiusa o in background. Attenzione: può influire negativamente sulla durata della batteria.</string>
    <string name="assicurati_ottimizzazione_batteria_disattivata">Assicurati che l\'ottimizzazione batteria per l\'app sia disattivata.</string>
    <string name="calendario">Calendario</string>
    <string name="preferiti">Preferiti</string>
    <string name="tutti">Tutti</string>
    <string name="aule_in_cui_hai_impegni">Aule in cui hai impegni</string>
    <string name="aule_aggiunte_ai_preferiti">Aule aggiunte ai preferiti</string>
    <string name="tutte_le_aule">Tutte le aule</string>
    <string name="notifiche_aule_nelle_vicinanze">Notifiche aule nelle vicinanze</string>
    <string name="nome_aula">Nome aula</string>
    <string name="nome_edificio">Nome edificio</string>
    <string name="rimuovi_pref">Rimuovi dai preferiti</string>
    <string name="silenzia_per_un_ora">Silenzia notifica aula per un\'ora</string>
    <string name="controlla">Controlla</string>
    <string name="sospendi_rilevamento">Sospendi Rilevamento</string>
    <string name="per_poter_utilizzare_questa_funzione_devi_essere_loggato">Per poter utilizzare questa funzione devi effettuare il login</string>
    <string name="stiamo_cercando_le_tue_aule">Stiamo cercando le tue aule</string>
    <string name="torna_indietro">Torna indietro</string>
    <string name="profilo">Profilo</string>
    <string name="eventi_di_oggi">Eventi di oggi</string>
    <string name="abilita">Abilita</string>
    <string name="errore_caricamento">Errore caricamento</string>

</resources>