<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8dp"
    android:background="@color/background_page">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/torna_indietro"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/profilo"
        android:src="@drawable/profile"
        app:civ_border_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/photo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo">

                <LinearLayout
                    android:id="@+id/info_user_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/background_rounded_16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_home">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/notifiche"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/icon_impostazioni"
                            android:drawablePadding="12dp"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:gravity="center_vertical"
                            android:paddingVertical="12dp"
                            android:text="@string/notifiche_aule_nelle_vicinanze"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_notifiche"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:thumb="@drawable/custom_thumb"
                            android:visibility="gone"
                            app:track="@drawable/custom_track" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/items_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <CheckBox
                            android:id="@+id/calendario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="44dp"
                            android:buttonTint="#34c759"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:tag="calendario"
                            android:text="@string/aule_in_cui_hai_impegni"
                            android:textSize="16sp" />


                        <CheckBox
                            android:id="@+id/preferiti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="44dp"
                            android:buttonTint="#34c759"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:tag="preferiti"
                            android:text="@string/aule_aggiunte_ai_preferiti"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/tutti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="44dp"
                            android:buttonTint="#34c759"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:tag="tutti"
                            android:text="@string/tutte_le_aule"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/background_scan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:drawablePadding="12dp"
                                android:fontFamily="@font/atkinsonhyperlegible_regular"
                                android:gravity="center_vertical"
                                android:paddingTop="12dp"
                                android:text="@string/scansione_in_background"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                app:drawableStartCompat="@drawable/baseline_blur_circular_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:fontFamily="@font/atkinsonhyperlegible_regular"
                                android:paddingBottom="12dp"
                                android:text="@string/la_ricerca_di_aule"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                        </LinearLayout>


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_background"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/scansione_in_background"
                            android:thumb="@drawable/custom_thumb"
                            app:track="@drawable/custom_track" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/battery_optimization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:text="@string/assicurati_ottimizzazione_batteria_disattivata"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/check_battery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/background_stroke_16dp"
                            android:text="@string/controlla"
                            android:contentDescription="@string/controlla"
                            android:textAllCaps="false"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/black"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/lettura"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/icon_question"
                            android:drawablePadding="12dp"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:paddingVertical="12dp"
                            android:text="@string/lettura"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_lettura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:thumb="@drawable/custom_thumb"
                            app:track="@drawable/custom_track" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--   <TextView
                   android:id="@+id/button_exit_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:background="@drawable/background_buttons"
                   android:drawablePadding="8dp"
                   android:fontFamily="@font/roboto"
                   android:paddingHorizontal="20dp"
                   android:paddingVertical="14dp"
                   android:text="@string/accedi"
                   android:textColor="@color/white"
                   android:textSize="18sp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/layout_settings"
                   app:drawableStartCompat="@drawable/exit"
                   android:layout_gravity="center_horizontal"/>
       -->
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>