<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.explore.ExploreHome">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/torna_indietro"
            android:padding="8dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/atkinsonhyperlegible_regular"
            android:importantForAccessibility="yes"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/profilo"
            android:src="@drawable/profile"
            app:civ_border_width="0dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:itemCount="4"
        tools:listitem="@layout/list_item">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <TextView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/remove_poi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_buttons_delete"
        android:contentDescription="@string/rimuovi_pref"
        android:drawableStart="@drawable/trash_can_solid"
        android:drawablePadding="8dp"
        android:fontFamily="@font/atkinsonhyperlegible_regular"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        android:text="@string/rimuovi_pref"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_poi"
        style="@style/Theme.Button.Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/aggiungi"
        android:drawablePadding="8dp"
        android:enabled="true"
        android:fontFamily="@font/atkinsonhyperlegible_regular"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        android:text="@string/aggiungi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>