<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.explore.ExploreHome"
    android:background="@color/background_page">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aggiungi_un_poi"
            android:textColor="@color/black"
            android:fontFamily="@font/atkinsonhyperlegible_bold"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:civ_border_width="0dp"
            android:src="@drawable/profile"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:itemCount="4"
        tools:listitem="@layout/list_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/edificio_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edificio"
                        android:textColor="@color/black"
                        android:fontFamily="@font/atkinsonhyperlegible_regular"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="13dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:alpha=".2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edificio_choice"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nome_edificio"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="13dp"
                            android:alpha=".75"
                            android:id="@+id/nome_edificio"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_down"
                            android:layout_margin="16dp"/>

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/aula_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aula"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/atkinsonhyperlegible_regular"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="13dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:alpha=".2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/aula_choice"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nome_aula"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="13dp"
                            android:alpha=".75"
                            android:fontFamily="@font/atkinsonhyperlegible_regular"
                            android:id="@+id/nome_aula"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_down"
                            android:layout_margin="16dp"/>

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_poi"
        style="@style/Theme.Button.Add"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/aggiungi"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="@font/atkinsonhyperlegible_regular"
        android:textColor="@color/white"
        android:paddingVertical="14dp"
        android:paddingHorizontal="20dp"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:drawableStartCompat="@drawable/ic_add"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>